# space

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
src/space/: __init__.py  __main__.py  config.py  space.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_space.py
